--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
       }(document, 'script', 'facebook-jssdk'));
     </script>
     <div id="app"></div>
-    <script src="../socket.io/socket.io.js"></script>
+    <script src="https://cbomb.herokuapp.com/socket.io/socket.io.js"></script>
     <script src="bundle.js"></script>
   </body>
 </html>
